scaleway/manifests/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: soberone
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp
    spec:
      containers:
      - image: registry.gitlab.com/privilege/webapp:latest
        imagePullPolicy: Always
        # livenessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: http
        #     scheme: HTTP
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 1
        name: webapp
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        # readinessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: http
        #     scheme: HTTP
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 1
        resources:
          limits:
            cpu: 20m
            ephemeral-storage: 1Gi
            memory: 40Mi
          requests:
            cpu: 10m
            ephemeral-storage: 1Gi
            memory: 20Mi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: gitlab-registry-creds
      # tolerations:
      # - effect: NoSchedule
      #   key: kubernetes.io/arch
      #   operator: Equal
      #   value: amd64
