scaleway/manifests/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: soberone
spec:
  # clusterIP: 10.125.130.87
  clusterIPs:
  # - 10.125.130.87
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: webapp
  sessionAffinity: None
  type: ClusterIP
